deploy/kustomize/components/analytics/clickhouse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse
spec:
  selector: {app: clickhouse}
  ports:
    - {name: native, port: 9000, targetPort: native}
    - {name: http, port: 8123, targetPort: http}
